# angular-tester

./: .coverage  .gitattributes  .gitignore  CONFIGURATION.md  MANIFEST.in  README.md  USAGE.md  commit_message.txt  demo.sh  generate_tests_only.py  google-chrome-stable_current_amd64.deb  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_local_github_actions.py  test_setup.sh
.github/workflows/: release.yml
example-angular-app/: .angulartesterrc  README.md  angular.json  karma.conf.js  package-lock.json  package.json
example-angular-app/src/app/: app.ts
example-angular-app/src/app/components/: user-card.component.spec.ts  user-card.component.ts
example-angular-app/src/app/services/: user.service.ts
src/angular_tester/: __init__.py  __main__.py  config.py  install_chrome.py  main.py
tests/: test_angular_tester.py  test_config.py  test_coverage.py  test_detailed.py  test_integration.py  test_main.py  test_methods.py
tests/fixtures/: sample.component.spec.ts  sample.component.ts
