[tool.poetry]
name = "angular-tester"
version = "0.1.0"
description = "A tool to generate and run Angular unit tests using LLMs"
authors = ["Arthur Santana da Silva <arthur.ea@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
angular-tester = "angular_tester.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"